--- a/motorsports.html
+++ b/motorsports.html
@@ -97,9 +97,14 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Race</a></td>
-<td>February 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 23, 2026 22:00:00" data-start="February 22, 2026 12:00:00"></span>
+<td><a href="https://roxiestreams.info/indycar">Indycar Series</a></td>
+<td>February 27, 2026 10:35 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 22:00:00" data-start="February 27, 2026 12:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
+<td>February 27, 2026 1:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 22:00:00" data-start="February 27, 2026 1:00:00"></span>
 </td>
 <tr>
 </tr></tr></tr></tr></tr></tbody>
