--- a/index.html
+++ b/index.html
@@ -221,17 +221,17 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-4">Premier League</a></td>
 <td>February 28, 2026 04:30 PM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 04:30:00 PM" data-start="February 28, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-5">Laliga</a></td>
 <td>February 28, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 05:00:00 AM" data-start="February 28, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-11">DORTMUND VS BAYERN (Der Klassiker)</a></td>
 <td>February 28, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 09:30:00 AM" data-start="February 28, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/supercross">AMA Supercross Daytona</a></td>
@@ -241,17 +241,17 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tr>
 <td><a href="https://roxiestreams.info/ppv-streams-1">EAST VS WEST XXII</a></td>
 <td>February 28, 2026 10:50 AM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 04:00:00 PM" data-start="February 27, 2026 04:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 10:50:00 AM" data-start="February 28, 2026 10:50:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Moreno vs Kavanagh</a></td>
 <td>February 28, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 02:00:00 PM" data-start="February 28, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/wwe-streams">WWE Elimination Chamber</a></td>
 <td>February 28, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="March 01, 2026 04:00:00 PM" data-start="February 28, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/motogp">MotoGP Grand Prix - Thailand</a></td>
