--- a/ufc.html
+++ b/ufc.html
@@ -101,10 +101,10 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 2 (SportsNet)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 3 (TNT)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (SAT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '602'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', 'daffodil'))">Stream 2 (SportsNet)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '602'))">Stream 3 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '602'))">Stream 4 (PARA)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -122,7 +122,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = '602';  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -136,7 +136,7 @@ fetch('domains.txt')
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = '601') {
+function getRandomStream(streamPath, subdomain = '602') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
