--- a/nhl-streams-1.html
+++ b/nhl-streams-1.html
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodilw.xn--1000-ugoa0hsb9a0hb.com/nhl.m3u8');
+            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba4.m3u8');
         };
     </script>
     <script>
