--- a/ppv-streams-2.html
+++ b/ppv-streams-2.html
@@ -48,9 +48,18 @@
             margin-top: 50px;
         }
         #playerContainer {
-            width: 70%;
+            width: 100%;
             height: 100%;
             position: relative;
+        }
+        #clapprContainer {
+            width: 100%;
+            height: 100%;
+        }
+        #twitchContainer {
+            width: 100%;
+            height: 100%;
+            display: none;
         }
         .embedchat {
             width: 30%;
@@ -71,12 +80,7 @@
             left: 10px;
             display: flex;
             gap: 10px;
-        }
-        #twitchIframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            display: none;
+            z-index: 10;
         }
     </style>
 
@@ -108,7 +112,15 @@
         <div class="fullplayer">
             <div id="playerContainer">
                 <div id="clapprContainer"></div>
-                <iframe id="twitchIframe" src="https://player.twitch.tv/?channel=nayagx&parent=roxiestreams.info&autoplay=true" allowfullscreen></iframe>
+                <div id="twitchContainer">
+                    <iframe id="twitchIframe" 
+                            src="https://player.twitch.tv/?channel=adapt&parent=roxiestreams.live&autoplay=true" 
+                            height="100%" 
+                            width="100%" 
+                            frameborder="0" 
+                            allowfullscreen="true">
+                    </iframe>
+                </div>
             </div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '602'))">Stream 1</button>
@@ -152,29 +164,29 @@ function getRandomStream(streamPath, subdomain = '602') {
   return `https://${subdomain}.${randomDomain}/${streamPath}`;
 }
 
-function showPlayer(playerType, stream) {
+function showPlayer(playerType, streamUrl) {
   const clapprContainer = document.getElementById('clapprContainer');
-  const twitchIframe = document.getElementById('twitchIframe');
+  const twitchContainer = document.getElementById('twitchContainer');
   
   if (playerType === "clappr") {
-    // Show Clappr container and hide Twitch iframe
+    // Hide Twitch, show Clappr
+    twitchContainer.style.display = 'none';
     clapprContainer.style.display = 'block';
-    twitchIframe.style.display = 'none';
     
     if (clapprPlayer) {
       clapprPlayer.destroy();
     }
     clapprPlayer = new Clappr.Player({
-      source: stream,
+      source: streamUrl,
       parentId: "#clapprContainer",
       height: '100%',
       width: '100%',
       autoPlay: true,
     });
   } else if (playerType === "twitch") {
-    // Hide Clappr container and show Twitch iframe
+    // Hide Clappr, show Twitch
     clapprContainer.style.display = 'none';
-    twitchIframe.style.display = 'block';
+    twitchContainer.style.display = 'block';
   }
 }
 </script>
