--- a/ppv-streams-2.html
+++ b/ppv-streams-2.html
@@ -123,8 +123,7 @@
                 </div>
             </div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '602'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('twitch')">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv2.m3u8', '602'))">Stream 1</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -150,7 +149,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('ppv.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('ppv2.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
